--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "hung-array",
+  "name": "project2",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -8,15 +8,15 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/Victord90/HungARRAY.git"
+    "url": "git+https://github.com/CristianF97/Project2.git"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/Victord90/HungARRAY/issues"
+    "url": "https://github.com/CristianF97/Project2/issues"
   },
-  "homepage": "https://github.com/Victord90/HungARRAY#readme",
+  "homepage": "https://github.com/CristianF97/Project2#readme",
   "devDependencies": {
     "eslint": "^6.8.0"
   },
